fix: Resolve salary prediction HTTP 501 error and enhance documentation
- Fix frontend API calls to target correct backend port (5000)
- Update API endpoints in index.html and growth_test.html
- Add comprehensive docstrings to salary_calculator.py
- Add test files for salary prediction API

--- a/growth_test.html
+++ b/growth_test.html
@@ -81,7 +81,7 @@
             resultsDiv.innerHTML = '<div class="result">Testing... Please wait.</div>';
             
             try {
-                const response = await fetch('/api/predict-salary', {
+                const response = await fetch('http://localhost:5000/api/predict-salary', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
